// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusMessage (Loading) 1`] = `
<span
  className="ms-font-l"
>
  Looking for other messages in this conversation...
</span>
`;

exports[`StatusMessage (NotFound) 1`] = `
<span
  className="ms-font-l"
>
  It looks like you haven't filed this conversation anywhere before.
</span>
`;

exports[`StatusMessage (Success) 1`] = `null`;
